# assignment-1

./: Makefile  README.md  docker-compose.yml  notes
client/: index.html  package.json
client/src/: App.css  App.jsx  LoginForm.jsx  Something.jsx  User.jsx
client/src/api/: useCreateSubscription.js  useRemoveSubscription.js  useSecurities.js  useSubscriptions.js
client/src/components/: Securities.jsx  SecurityListItem.jsx  Subscriptions.jsx  index.js
django/: celerybeat-schedule  pyproject.toml  requirements.txt
django/casestudy/: admin.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
django/casestudy/migrations/: 0002_subscription.py  0003_rename_ticker_subscription_security_and_more.py
hurl/: debug.hurl  external-prices-get.hurl  external-tickers-get.hurl  get-tickers.hurl  login.hurl  securities-get.hurl  subscription-delete.hurl  subscriptions-create.hurl  subscriptions-get.hurl
